<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="https://maven.apache.org/POM/4.0.0
                             https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.freelancemarketplace</groupId>
    <artifactId>microservices-parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Freelance Marketplace - Microservices Parent</name>
    <description>Parent POM for Freelance Marketplace Microservices</description>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.5</version>
        <relativePath/>
    </parent>

    <properties>
        <java.version>21</java.version>
        <spring-cloud.version>2023.0.3</spring-cloud.version>
        <shared.version>1.0.0-SNAPSHOT</shared.version>
    </properties>

    <modules>
        <module>shared</module>
        <module>discovery-server</module>
        <module>api-gateway</module>
        <module>auth-service</module>
        <module>user-service</module>
        <module>gig-service</module>
        <module>order-service</module>
        <module>wallet-service</module>
        <module>review-service</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- Spring Cloud Dependencies -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Internal Shared Modules -->
            <dependency>
                <groupId>com.freelancemarketplace</groupId>
                <artifactId>common-dto</artifactId>
                <version>${shared.version}</version>
            </dependency>
            <dependency>
                <groupId>com.freelancemarketplace</groupId>
                <artifactId>common-exception</artifactId>
                <version>${shared.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <configuration>
                        <excludes>
                            <exclude>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </exclude>
                        </excludes>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
